ts-wit-bindgen/grammar.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = /^[ \t\n\r]/,
      peg$c1 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c2 = function(value) { return { whitespace: value } },
      peg$c3 = "///",
      peg$c4 = peg$literalExpectation("///", false),
      peg$c5 = function(value) { return { comment: value.join('') } },
      peg$c6 = "/**",
      peg$c7 = peg$literalExpectation("/**", false),
      peg$c8 = "*/",
      peg$c9 = peg$literalExpectation("*/", false),
      peg$c10 = "//",
      peg$c11 = peg$literalExpectation("//", false),
      peg$c12 = "/*",
      peg$c13 = peg$literalExpectation("/*", false),
      peg$c14 = "=",
      peg$c15 = peg$literalExpectation("=", false),
      peg$c16 = function(value) { return { operator: value } },
      peg$c17 = ",",
      peg$c18 = peg$literalExpectation(",", false),
      peg$c19 = ":",
      peg$c20 = peg$literalExpectation(":", false),
      peg$c21 = ";",
      peg$c22 = peg$literalExpectation(";", false),
      peg$c23 = "(",
      peg$c24 = peg$literalExpectation("(", false),
      peg$c25 = ")",
      peg$c26 = peg$literalExpectation(")", false),
      peg$c27 = "{",
      peg$c28 = peg$literalExpectation("{", false),
      peg$c29 = "}",
      peg$c30 = peg$literalExpectation("}", false),
      peg$c31 = "<",
      peg$c32 = peg$literalExpectation("<", false),
      peg$c33 = ">",
      peg$c34 = peg$literalExpectation(">", false),
      peg$c35 = "*",
      peg$c36 = peg$literalExpectation("*", false),
      peg$c37 = "->",
      peg$c38 = peg$literalExpectation("->", false),
      peg$c39 = function(value) { return { keyword: value } },
      peg$c40 = "u8",
      peg$c41 = peg$literalExpectation("u8", false),
      peg$c42 = "u16",
      peg$c43 = peg$literalExpectation("u16", false),
      peg$c44 = "u32",
      peg$c45 = peg$literalExpectation("u32", false),
      peg$c46 = "u64",
      peg$c47 = peg$literalExpectation("u64", false),
      peg$c48 = "s8",
      peg$c49 = peg$literalExpectation("s8", false),
      peg$c50 = "s16",
      peg$c51 = peg$literalExpectation("s16", false),
      peg$c52 = "s32",
      peg$c53 = peg$literalExpectation("s32", false),
      peg$c54 = "s64",
      peg$c55 = peg$literalExpectation("s64", false),
      peg$c56 = "float32",
      peg$c57 = peg$literalExpectation("float32", false),
      peg$c58 = "float64",
      peg$c59 = peg$literalExpectation("float64", false),
      peg$c60 = "char",
      peg$c61 = peg$literalExpectation("char", false),
      peg$c62 = "handle",
      peg$c63 = peg$literalExpectation("handle", false),
      peg$c64 = "bool",
      peg$c65 = peg$literalExpectation("bool", false),
      peg$c66 = "string",
      peg$c67 = peg$literalExpectation("string", false),
      peg$c68 = "option",
      peg$c69 = peg$literalExpectation("option", false),
      peg$c70 = "list",
      peg$c71 = peg$literalExpectation("list", false),
      peg$c72 = "expected",
      peg$c73 = peg$literalExpectation("expected", false),
      peg$c74 = "unit",
      peg$c75 = peg$literalExpectation("unit", false),
      peg$c76 = "as",
      peg$c77 = peg$literalExpectation("as", false),
      peg$c78 = "from",
      peg$c79 = peg$literalExpectation("from", false),
      peg$c80 = "static",
      peg$c81 = peg$literalExpectation("static", false),
      peg$c82 = "interface",
      peg$c83 = peg$literalExpectation("interface", false),
      peg$c84 = "tuple",
      peg$c85 = peg$literalExpectation("tuple", false),
      peg$c86 = "async",
      peg$c87 = peg$literalExpectation("async", false),
      peg$c88 = "future",
      peg$c89 = peg$literalExpectation("future", false),
      peg$c90 = "stream",
      peg$c91 = peg$literalExpectation("stream", false),
      peg$c92 = "use",
      peg$c93 = peg$literalExpectation("use", false),
      peg$c94 = function(uses, from) { return { use_item: {uses, from: from.join('')} } },
      peg$c95 = function(value) { return value },
      peg$c96 = function(value0, valuen) { return flatten1({value0, valuen}) },
      peg$c97 = function(value, alias) { return { value:value.join(''), alias:alias.join('') } },
      peg$c98 = function(value) { return { value: value.join('') } },
      peg$c99 = "type",
      peg$c100 = peg$literalExpectation("type", false),
      peg$c101 = function(alias, ty) { return { type: { alias:alias.join(''), ty } }},
      peg$c102 = "record",
      peg$c103 = peg$literalExpectation("record", false),
      peg$c104 = function(name, fields) { return { record_item: {name: name.join(''), fields} } },
      peg$c105 = function(value0, valuen) { return flatten3({ value0, valuen }) },
      peg$c106 = function(property_name, property_type) { return { record_field: { property_name: property_name.join(''), property_type } } },
      peg$c107 = "flags",
      peg$c108 = peg$literalExpectation("flags", false),
      peg$c109 = function(name, fields) { return { flags_item: {name: name.join(''), fields} } },
      peg$c110 = function(value0, valuen) { return flatten4({ value0: value0.join(''), valuen }) },
      peg$c111 = function(value) { return value.join('') },
      peg$c112 = "variant",
      peg$c113 = peg$literalExpectation("variant", false),
      peg$c114 = function(name, fields) { return { variant_item: {name: name.join(''), fields} } },
      peg$c115 = function(value0, valuen) { return flatten3({value0, valuen}) },
      peg$c116 = function(value, ty) { return { value: value.join(''), ty } },
      peg$c117 = function(value) { return { value: value.join('')} },
      peg$c118 = "enum",
      peg$c119 = peg$literalExpectation("enum", false),
      peg$c120 = function(name, cases) { return { enum_item: {name: name.join(''), cases} } },
      peg$c121 = function(value0, valuen) { return flatten4({value0: value0.join(''), valuen}) },
      peg$c122 = "union",
      peg$c123 = peg$literalExpectation("union", false),
      peg$c124 = function(name, cases) { return { union_item: {name: name.join(''), cases} } },
      peg$c125 = function(value0, valuen) { return flatten4({value0, valuen}) },
      peg$c126 = "func",
      peg$c127 = peg$literalExpectation("func", false),
      peg$c128 = function(name, async, args, ret) { return { func_item: { name: name.join(''), async, args, ret} } },
      peg$c129 = function(param_name, param_type) { return { param_name: param_name.join(''), param_type } },
      peg$c130 = function(ty) { return ty},
      peg$c131 = function() { return null },
      peg$c132 = "resource",
      peg$c133 = peg$literalExpectation("resource", false),
      peg$c134 = function(name, contents) { return { resource_item: { name: name.join(''), contents } } },
      peg$c135 = function(defs) { return defs },
      peg$c136 = function(stat, fn) { return { stat, fn } },
      peg$c137 = /^[^\n]/,
      peg$c138 = peg$classExpectation(["\n"], true, false),
      peg$c139 = /^[^*\/]/,
      peg$c140 = peg$classExpectation(["*", "/"], true, false),
      peg$c141 = /^[a-zA-Z_0-9\-]/,
      peg$c142 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"], "-"], false, false),
      peg$c143 = function(value) { return { tuple: value } },
      peg$c144 = function(value) { return { list: value } },
      peg$c145 = function(value) { return { option: value } },
      peg$c146 = function(ok, err) { return { expected: { ok, err } } },
      peg$c147 = function(value) { return { future: { value } } },
      peg$c148 = function(value0, value1) { return { stream: { value0, value1 } } },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = [];
    s1 = peg$parse_();
    if (s1 === peg$FAILED) {
      s1 = peg$parsecomment();
      if (s1 === peg$FAILED) {
        s1 = peg$parseoperator();
        if (s1 === peg$FAILED) {
          s1 = peg$parsekeyword();
        }
      }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parse_();
      if (s1 === peg$FAILED) {
        s1 = peg$parsecomment();
        if (s1 === peg$FAILED) {
          s1 = peg$parseoperator();
          if (s1 === peg$FAILED) {
            s1 = peg$parsekeyword();
          }
        }
      }
    }

    return s0;
  }

  function peg$parse_() {
    var s0, s1;

    s0 = peg$currPos;
    if (peg$c0.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c2(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsecomment() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsecharacter_that_isnt_a_newline();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsecharacter_that_isnt_a_newline();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c6) {
        s1 = peg$c6;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseany_unicode_character();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseany_unicode_character();
        }
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c8) {
            s3 = peg$c8;
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c5(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 2) === peg$c10) {
          s1 = peg$c10;
          peg$currPos += 2;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parsecharacter_that_isnt_a_newline();
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsecharacter_that_isnt_a_newline();
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parse_();
            if (s3 === peg$FAILED) {
              s3 = null;
            }
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c5(s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 2) === peg$c12) {
            s1 = peg$c12;
            peg$currPos += 2;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
          if (s1 !== peg$FAILED) {
            s2 = [];
            s3 = peg$parseany_unicode_character();
            while (s3 !== peg$FAILED) {
              s2.push(s3);
              s3 = peg$parseany_unicode_character();
            }
            if (s2 !== peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c8) {
                s3 = peg$c8;
                peg$currPos += 2;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c9); }
              }
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c5(s2);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseoperator() {
    var s0, s1;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 61) {
      s1 = peg$c14;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c15); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c16(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 44) {
        s1 = peg$c17;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c18); }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c16(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 58) {
          s1 = peg$c19;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c20); }
        }
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c16(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 59) {
            s1 = peg$c21;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c22); }
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c16(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 40) {
              s1 = peg$c23;
              peg$currPos++;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c24); }
            }
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c16(s1);
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              if (input.charCodeAt(peg$currPos) === 41) {
                s1 = peg$c25;
                peg$currPos++;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c26); }
              }
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c16(s1);
              }
              s0 = s1;
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 123) {
                  s1 = peg$c27;
                  peg$currPos++;
                } else {
                  s1 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c28); }
                }
                if (s1 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c16(s1);
                }
                s0 = s1;
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  if (input.charCodeAt(peg$currPos) === 125) {
                    s1 = peg$c29;
                    peg$currPos++;
                  } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c30); }
                  }
                  if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c16(s1);
                  }
                  s0 = s1;
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    if (input.charCodeAt(peg$currPos) === 60) {
                      s1 = peg$c31;
                      peg$currPos++;
                    } else {
                      s1 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c32); }
                    }
                    if (s1 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c16(s1);
                    }
                    s0 = s1;
                    if (s0 === peg$FAILED) {
                      s0 = peg$currPos;
                      if (input.charCodeAt(peg$currPos) === 62) {
                        s1 = peg$c33;
                        peg$currPos++;
                      } else {
                        s1 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c34); }
                      }
                      if (s1 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c16(s1);
                      }
                      s0 = s1;
                      if (s0 === peg$FAILED) {
                        s0 = peg$currPos;
                        if (input.charCodeAt(peg$currPos) === 42) {
                          s1 = peg$c35;
                          peg$currPos++;
                        } else {
                          s1 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c36); }
                        }
                        if (s1 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c16(s1);
                        }
                        s0 = s1;
                        if (s0 === peg$FAILED) {
                          s0 = peg$currPos;
                          if (input.substr(peg$currPos, 2) === peg$c37) {
                            s1 = peg$c37;
                            peg$currPos += 2;
                          } else {
                            s1 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c38); }
                          }
                          if (s1 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c16(s1);
                          }
                          s0 = s1;
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsekeyword() {
    var s0, s1;
